--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/utilities.css">
     <link rel="stylesheet" href="/css/main.css">
-    <title>Document</title>
+    <title>nexusapplication</title>
 </head>
 
 <body>
