--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/utilities.css">
     <link rel="stylesheet" href="/css/main.css">
-    <title>www.nexusapplic</title>
+    <title>nexusapplication</title>
 </head>
 
 <body>
@@ -49,6 +49,11 @@
                 <p>
                     Nexus lets you manage all your business information, providing a comprensive<br> view of the status of your business.
                 </p>
+            </div>
+        </section>
+        <section id="center-content" class="flex vertical center-cente">
+            <div id="centeral">
+                <p></p>
             </div>
         </section>
 
