--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/utilities.css">
-    <link rel="stylesheet" href="/css/main.css" type="text/css">
-    <link rel="icon" href="/nexus-logo.svg">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/utilities.css">
+    <link rel="stylesheet" href="css/main.css" type="text/css">
+    <link rel="icon" href="nexus-logo.svg">
     <title>Nexus Application</title>
 </head>
 
@@ -16,7 +16,7 @@
     <header>
         <div class="wrapper">           
             <div class="flex justify-around">
-                <img src="/nexus-logo.svg" alt="NEXUS" class="logo">
+                <img src="nexus-logo.svg" alt="NEXUS" class="logo">
                 <div class="flex items-end">
                     <nav>
                         <ul id="test">
@@ -37,7 +37,7 @@
                     </a>
                 </div>
                 <!-- <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
-                <path d="M1.293 1.293a1 1 0 0 1 1.414 0L8 6.586l5.293-5.293a1 1 0 1 1 1.414 1.414L9.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414L8 9.414l-5.293 5.293a1 1 0 0 1-1.414-1.414L6.586 8 1.293 2.707a1 1 0 0 1 0-1.414z"/>
+                <path d="M1.293 1.293a1 1 0 0 1 1.414 0L8 6.586l5.293-5.293a1 1 0 1 1 1.414 1.414L9.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414L8 9.414l-5.293 5.293a1 1 0 0 1-1.414-1.414L6.586 8 1.293 2.707a1 1 0 0 1 0-1.414z">
               </svg> -->
             </div>
         </div>
@@ -51,10 +51,10 @@
                 </p>
             </div>
             <div class="top-bg">
-                <img id="phonebg" src="/phonebg.png">
-                <img id="backbg" src="/Backinterface (2).png">
-                <img id="fontbg" src="/frontinterface.png">
-                <img id="oilbg" src="/oilbg.svg">
+                <img id="phonebg" src="phonebg.png">
+                <img id="backbg" src="Backinterface (2).png">
+                <img id="fontbg" src="frontinterface.png">
+                <img id="oilbg" src="oilbg.svg">
             </div>
         </section>
         <section id="center-content">
@@ -65,7 +65,7 @@
                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam dolores voluptates voluptatibus id a, praesentium sapiente, quidem recusandae similique voluptatem, temporibus animi quo eos expedita perferendis. Quia ea quam dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis rerum praesentium, laborum alias sit itaque quaerat ratione velit dolores. Illo dolor sunt mollitia ipsam odio nesciunt totam fugit incidunt quaerat!</p>
                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit dolore perspiciatis maxime eius ducimus beatae illum debitis ullam, neque culpa nesciunt incidunt maiores placeat consequatur temporibus. Accusantium aut sit inventore! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi temporibus, ipsa magni adipisci eaque nisi modi consectetur illum nam perferendis, vero reprehenderit ut eius pariatur impedit! Reprehenderit iusto omnis assumenda</p>
                 <div class="requestbtn" ><a href="#"> Request A Demo </a></div>
-                 <img src="/blue-bg.svg">   
+                 <img src="blue-bg.svg">   
             </div>
         </section>
 
@@ -76,24 +76,24 @@
         <section class="Top-content" >
             <div id="Testmonial">
                 <h1>HEAR FROM OUR CUSTOMERS</h1>
-                <div class="profile-bg"><img id="profile-bg" src="/patternBg.svg"></div>
-                <div class="profile"><img id="profile-pic" src="/oilbg.svg"></div>
+                <div class="profile-bg"><img id="profile-bg" src="patternBg.svg"></div>
+                <div class="profile"><img id="profile-pic" src="oilbg.svg"></div>
                 <p>Thanks guys, keep up the good work! Chamer should be nominated for service of the year. You won't regret it.</p>
                 <h2>Alberto Donko</h2>
                 <h3>CEO, Squareround</h3>
             </div>    
 
             <!-- <div id="Testmonial" class="comments">
-                <div class="profile-bg1"><img id="profile-bg" src="/patternBg.svg"></div>
-                <div class="profile1"><img id="profile-pic" src="/oilbg.svg"></div>
+                <div class="profile-bg1"><img id="profile-bg" src="patternBg.svg"></div>
+                <div class="profile1"><img id="profile-pic" src="oilbg.svg"></div>
                 <p>Thanks guys, keep up the good work! Chamer should be nominated for service of the year. You won't regret it.</p>
                 <h2>Alberto Donko</h2>
                 <h3>CEO, Squareround</h3>
             </div>    
 
             <div id="Testmonial" class="comments">
-                <div class="profile-bg1"><img id="profile-bg" src="/patternBg.svg"></div>
-                <div class="profile1"><img id="profile-pic" src="/oilbg.svg"></div>
+                <div class="profile-bg1"><img id="profile-bg" src="patternBg.svg"></div>
+                <div class="profile1"><img id="profile-pic" src="oilbg.svg"></div>
                 <p>Thanks guys, keep up the good work! Chamer should be nominated for service of the year. You won't regret it.</p>
                 <h2>Alberto Donko</h2>
                 <h3>CEO, Squareround</h3>   
@@ -103,7 +103,7 @@
         <section class="faqs">
             <div class="wrapper">
                 <div id="faqs-heading" class="Top-content">
-                    <div class="bg-footer1"> <img src="/orange-bg.svg"></div>
+                    <div class="bg-footer1"> <img src="orange-bg.svg"></div>
                     <h1 class="instructor-heading align-center">FREQUENTLY ASKED QUESTIONS</h1>
                     <p>Are you curious About something?</p>
                 </div>
@@ -220,7 +220,7 @@
                     <div class="course-button" id="submit-btn"><a href="#">submit</a></div>
                 </div>
                 <div id="footer-contect">
-                    <div class="bg-footer"> <img src="/orange-bg.svg"></div>
+                    <div class="bg-footer"> <img src="orange-bg.svg"></div>
                     <div class="Top-content" id="contact-banner">
                         <h1>CONTACT US</h1>
                         <h2>We Want To Hear<br> From You</h2>
@@ -256,7 +256,7 @@
             </div>
         </footer>
     </main>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
     <script>
                 // Accordion Functionality
         document.querySelectorAll(".accordion").forEach(acc => {
