--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="main.css" type="text/css">
-    <link rel="icon" href="nexus-logo.svg">
+    <link rel="icon" href="nexus-logo.svg" class="iconlogo">
     <title>Nexus Application</title>
 </head>
 
